Projet_GL/src/test/deca/context/invalid/unprovided/badUnaryOpMinus.deca
// Description:
//    Appel d'un minus sur un boolean
//
// Resultat: Ligne 13
//    ContextualError: Unsupported types for this operation: Operands must be of type float or int
//
// Historique:
//    cree le 24/01/2018

{
	boolean a;
	a = -a;
}
